tests/fixtures/invalid/pow_none_float_int.py
# Cannot call pow() with None, Float, Int
x = pow(None, 1.0, 1)
